# pdfsources

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
info/: anystyle-summary-report.md  pdfsources-vs-anystyle.md
reference/: README.md  anystyle-cli-help.txt  anystyle-cli.md  zurch-help.txt  zurch_searches.txt
src/pdfsources/: __main__.py  cli.py  combine_anystyle_output.py  config.py  discovery.py  extractor.py  main.py  models.py  writers.py
src/pdfsources/formatters/: __init__.py  apa.py  base.py  chicago.py  harvard.py
tests/: test_cli.py  test_data_cleaning.py  test_edge_cases.py  test_file_protection.py  test_helpers.py  test_models.py  test_process_citations.py
